# sort-puzzle-rs

./: Cargo.toml  Readme.md  package.json  record.puzzle  rustfmt.toml
src/: lib.rs  main.rs
src/game/: ai.rs  game.rs  mod.rs  tube.rs  tube4.rs
tests/: main.rs
