[package]
name = "sort-puzzle"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "binary tree of n variables where the parent node represents a function and the child node represents a value."
edition = "2018"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/GalAster/sort-puzzle-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
itertools = "0.9"
rand = "0.7"
# tuple-conv = "1.0"
